--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -200,8 +200,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Compile Include="Controllers\Liberacoes\V1\Movimentacoes\GetMovimentacoesLiberacoesController.cs" />
+    <Compile Include="Controllers\Liberacoes\V1\Movimentacoes\MovimentacoesLiberacoesController.cs" />
+    <Compile Include="Helper\Liberacoes\Movimentacoes\TraducaoOrdenacaoListaMovimentacoesLiberacoes.cs" />
     <Compile Include="Helper\Produtos\MateriaPrima\Posicao\ChapaMateriaPrima\TraducaoOrdenacaoListaChapasMateriaPrima.cs" />
     <Compile Include="Helper\Produtos\MateriaPrima\Posicao\TraducaoOrdenacaoListaPosicoesMateriaPrima.cs" />
+    <Compile Include="Models\Liberacoes\V1\Movimentacoes\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Liberacoes\V1\Movimentacoes\Lista\FormasPagamentoDto.cs" />
+    <Compile Include="Models\Liberacoes\V1\Movimentacoes\Lista\ListaDto.cs" />
+    <Compile Include="Models\Liberacoes\V1\SituacoesEnum\SituacoesEnum.cs" />
     <Compile Include="Models\Produtos\V1\MateriaPrima\Lista\FiltroDto.cs" />
     <Content Include="Web.config" />
   </ItemGroup>
