--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -229,6 +229,9 @@
     <Compile Include="Controllers\ContasPagar\V1\Pagas\ContasPagasController.cs" />
     <Compile Include="Controllers\ContasPagar\V1\Pagas\GetContasPagasController.cs" />
     <Compile Include="Controllers\ContasPagar\V1\Pagas\PatchContasPagasController.cs" />
+    <Compile Include="Controllers\Pedidos\V1\Exportacao\GetPedidosExportacaoController.cs" />
+    <Compile Include="Controllers\Pedidos\V1\Exportacao\PedidosExportacaoController.cs" />
+    <Compile Include="Controllers\Pedidos\V1\Exportacao\PostPedidosExportacaoController.cs" />
     <Compile Include="Controllers\Produtos\V1\GetProdutosController.cs" />
     <Compile Include="Controllers\Produtos\V1\PrecosTabelaCliente\GetPrecosTabelaClienteController.cs" />
     <Compile Include="Controllers\Produtos\V1\PrecosTabelaCliente\PrecosTabelaClienteController.cs" />
@@ -242,6 +245,7 @@
     <Compile Include="Helper\ConhecimentosTrasporte\Veiculos\Proprietarios\TraducaoOrdenacaoListaProprietariosDeVeiculos.cs" />
     <Compile Include="Helper\ContasPagar\Pagas\ConverterCadastroAtualizacaoParaContasPagas.cs" />
     <Compile Include="Helper\ContasPagar\Pagas\TraducaoOrdenacaoListaContasPagas.cs" />
+    <Compile Include="Helper\Pedidos\Exportacao\TraducaoOrdenacaoListaPedidosExportacao.cs" />
     <Compile Include="Helper\Produtos\PrecosTabelaCliente\TraducaoOrdenacaoListaPrecoTabelaCliente.cs" />
     <Compile Include="Helper\Produtos\ChapasVidro\Perdas\TraducaoOrdenacaoListaPerdasChapasVidro.cs" />
     <Compile Include="Helper\Producao\Retalhos\TraducaoOrdenacaoListaRetalhosProducao.cs" />
@@ -833,12 +837,22 @@
     <Compile Include="Models\Parcelas\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Parcelas\V1\Detalhe\DetalheDto.cs" />
     <Compile Include="Models\Pedidos\V1\Configuracoes\ListaVolumesDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\Lista\DatasDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\Lista\ListaDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\Lista\SituacoesDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\PedidoExportar\PedidoDto.cs" />
+    <Compile Include="Models\Pedidos\V1\Exportacao\PedidoExportar\PedidosExportarDto.cs" />
     <Compile Include="Models\Pedidos\V1\ListaVolumes\PedidoExternoDto.cs" />
     <Compile Include="Models\Pedidos\V1\ListaVolumes\DadosVolumeDto.cs" />
     <Compile Include="Models\Pedidos\V1\ListaVolumes\FiltroDto.cs" />
     <Compile Include="Models\Pedidos\V1\ListaVolumes\ListaDto.cs" />
     <Compile Include="Models\Pedidos\V1\ListaVolumes\PermissoesDto.cs" />
     <Compile Include="Models\Carregamentos\V1\OrdensCarga\Lista\Pedidos\ListaDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ProdutosPedido\Exportacao\Lista\ListaDto.cs" />
+    <Compile Include="Models\Pedidos\V1\ProdutosPedido\Exportacao\Lista\ProdutoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\GruposConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\CategoriasConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
