#2564-Refatoração tela de listagem de compras de mercadorias

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -200,7 +200,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Compile Include="Controllers\Compras\V1\Mercadorias\ComprasMercadoriasController.cs" />
+    <Compile Include="Controllers\Compras\V1\Mercadorias\DeleteComprasMercadoriasController.cs" />
+    <Compile Include="Controllers\Compras\V1\Mercadorias\GetComprasMercadoriasController.cs" />
+    <Compile Include="Controllers\Compras\V1\Mercadorias\PostComprasMercadoriasController.cs" />
+    <Compile Include="Helper\Compras\Mercadorias\TraducaoOrdenacaoListaComprasMercadorias.cs" />
     <Compile Include="Helper\ImpressoesEtiquetas\Individual\TraducaoOrdenacaoListaImpressoesIndividuaisEtiquetas.cs" />
+    <Compile Include="Models\Compras\V1\Mercadorias\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Compras\V1\Mercadorias\Lista\ListaDto.cs" />
+    <Compile Include="Models\Compras\V1\Mercadorias\Lista\PermissoesDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\ListaDto.cs" />
