--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -494,6 +494,9 @@
     <Content Include="Vue\Clientes\Sugestoes\Componentes\LstSugestaoCliente.js" />
     <Content Include="Vue\Clientes\Sugestoes\Templates\LstSugestaoCliente.Filtro.html" />
     <Content Include="Vue\Clientes\Tipos\Componentes\LstTipos.js" />
+    <Content Include="Vue\Compras\Mercadorias\Componentes\LstComprasMercadorias.Filtro.js" />
+    <Content Include="Vue\Compras\Mercadorias\Componentes\LstComprasMercadorias.js" />
+    <Content Include="Vue\Compras\Mercadorias\Templates\LstComprasMercadorias.Filtro.html" />
     <Content Include="Vue\ConhecimentosTransporte\Veiculos\Proprietarios\Associacoes\Componentes\ListaAssociacaoProprietariosVeiculos.js" />
     <Content Include="Vue\ContasPagar\Componentes\ListaContasPagar.Filtro.js" />
     <Content Include="Vue\ContasPagar\Componentes\ListaContasPagar.js" />
