#2582-Refatoração da tela de listagem de devoluções de pagamentos

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -200,7 +200,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Compile Include="Controllers\DevolucoesPagamento\DevolucoesPagamentoController.cs" />
+    <Compile Include="Controllers\DevolucoesPagamento\GetDevolucoesPagamentoController.cs" />
+    <Compile Include="Helper\DevolucoesPagamento\TraducaoOrdenacaoListaDevolucoesPagamento.cs" />
     <Compile Include="Helper\ImpressoesEtiquetas\Individual\TraducaoOrdenacaoListaImpressoesIndividuaisEtiquetas.cs" />
+    <Compile Include="Models\DevolucoesPagamento\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\DevolucoesPagamento\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\DevolucoesPagamento\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\ListaDto.cs" />
