--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -215,7 +215,7 @@
     <Compile Include="Models\Liberacoes\V1\Movimentacoes\Lista\FiltroDto.cs" />
     <Compile Include="Models\Liberacoes\V1\Movimentacoes\Lista\FormasPagamentoDto.cs" />
     <Compile Include="Models\Liberacoes\V1\Movimentacoes\Lista\ListaDto.cs" />
-    <Compile Include="Models\Liberacoes\V1\SituacoesEnum\SituacoesEnum.cs" />
+    <Compile Include="Models\Liberacoes\V1\SituacoesLiberacoesEnum\SituacoesLiberacoesEnum.cs" />
     <Compile Include="Models\Produtos\V1\MateriaPrima\Lista\FiltroDto.cs" />
     <Content Include="Web.config" />
   </ItemGroup>
