#2595 - Refatoração da tela de listagem de limite de cheques por cpf/cnpj.

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -200,7 +200,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Compile Include="Controllers\Cheques\V1\LimitePorCpfCnpj\GetLimiteChequePorCpfCnpjController.cs" />
+    <Compile Include="Controllers\Cheques\V1\LimitePorCpfCnpj\LimiteChequePorCpfCnpjController.cs" />
+    <Compile Include="Controllers\Cheques\V1\LimitePorCpfCnpj\PatchLimiteChequePorCpfCnpjController.cs" />
+    <Compile Include="Helper\Cheques\LimitePorCpfCnpj\ConverterCadastroAtualizacaoParaLimiteChequeCpfCnpj.cs" />
+    <Compile Include="Helper\Cheques\LimitePorCpfCnpj\TraducaoOrdenacaoListaLimiteChequeCpfCnpj.cs" />
     <Compile Include="Helper\ImpressoesEtiquetas\Individual\TraducaoOrdenacaoListaImpressoesIndividuaisEtiquetas.cs" />
+    <Compile Include="Models\Cheques\V1\LimitePorCpfCnpj\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\Cheques\V1\LimitePorCpfCnpj\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Cheques\V1\LimitePorCpfCnpj\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Cheques\V1\LimitePorCpfCnpj\Lista\LimiteDto.cs" />
+    <Compile Include="Models\Cheques\V1\LimitePorCpfCnpj\Lista\ListaDto.cs" />
+    <Compile Include="Models\Cheques\V1\LimitePorCpfCnpj\Lista\PermissoesDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\ListaDto.cs" />
