--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -502,6 +502,9 @@
     <Content Include="Vue\ContasPagar\Pagas\Templates\ListaContasPagas.Filtro.html" />
     <Content Include="Vue\ContasPagar\Templates\ListaContasPagar.Filtro.html" />
     <Content Include="Vue\ConhecimentosTransporte\Veiculos\Proprietarios\Componentes\ListaProprietariosVeiculo.js" />
+    <Content Include="Vue\EncontrosContas\Componentes\LstEncontrosContas.Filtro.js" />
+    <Content Include="Vue\EncontrosContas\Componentes\LstEncontrosContas.js" />
+    <Content Include="Vue\EncontrosContas\Templates\LstEncontrosContas.Filtro.html" />
     <Content Include="Vue\Estoques\TrocasDevolucoes\Componentes\LstTrocaDevolucao.Filtro.js" />
     <Content Include="Vue\Estoques\TrocasDevolucoes\Componentes\LstTrocaDevolucao.js" />
     <Content Include="Vue\Estoques\TrocasDevolucoes\Templates\LstTrocaDevolucao.Filtro.html" />
@@ -1906,6 +1909,7 @@
     <Content Include="Vue\_Compartilhado\Servicos\Compras.js" />
     <Content Include="Vue\_Compartilhado\Servicos\ContasPagar.js" />
     <Content Include="Vue\_Compartilhado\Servicos\ConhecimentosTransporte.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\EncontrosContas.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Exportacao.js" />
     <Content Include="Vue\_Compartilhado\Servicos\ImpressoesEtiquetas.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Pagamentos.js" />
