#2650 $89215 - Inseri o parâmetro maxAllowedContentLength com o valor limite de 114 MB. Alterei o tempo limite de execução, do parâmetro HttpRuntime, de 240 segundos para 360 segundos. Testei a importação do arquivo e ela ocorreu normalmente.

--- a/Glass/Web.config
+++ b/Glass/Web.config
@@ -31,7 +31,7 @@
         <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </controls>
     </pages>
-    <httpRuntime targetFramework="4.5.2" executionTimeout="240" maxRequestLength="20480" />
+    <httpRuntime targetFramework="4.5.2" executionTimeout="360" maxRequestLength="20480" />
     <globalization culture="pt-BR" />
     <httpModules>
       <add name="CompressionModule" type="Glass.Data.Compressao.CompressionModule, Glass.Data" />
@@ -79,6 +79,11 @@
         <add value="iisstart.htm" />
       </files>
     </defaultDocument>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="120000000"/>
+      </requestFiltering>
+    </security>
   </system.webServer>
   <system.web.extensions>
     <scripting>
