#2689 - Refatoração da tela de listagem de arquivos de remessa.

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -199,8 +199,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ArquivosRemessa\V1\DeleteArquivosRemessaController.cs" />
     <Content Include="Global.asax" />
+    <Compile Include="Controllers\ArquivosRemessa\V1\ArquivosRemessaController.cs" />
+    <Compile Include="Controllers\ArquivosRemessa\V1\GetArquivosRemessaController.cs" />
+    <Compile Include="Helper\ArquivosRemessa\TraducaoOrdenacaoListaArquivosRemessa.cs" />
     <Compile Include="Helper\ImpressoesEtiquetas\Individual\TraducaoOrdenacaoListaImpressoesIndividuaisEtiquetas.cs" />
+    <Compile Include="Models\ArquivosRemessa\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\ArquivosRemessa\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\ArquivosRemessa\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\ImpressoesEtiquetas\V1\Lista\ListaDto.cs" />
@@ -885,7 +892,7 @@
     <Compile Include="Models\Pedidos\V1\ListaVolumes\ListaDto.cs" />
     <Compile Include="Models\Pedidos\V1\ListaVolumes\PermissoesDto.cs" />
     <Compile Include="Models\Carregamentos\V1\OrdensCarga\Lista\Pedidos\ListaDto.cs" />
-    <Compile Include="Models\Pedidos\V1\TipoPedidoPCPEnum\TipoPedidoPCPEnum.cs" />
+    <Compile Include="Models\Produtos\V1\MateriaPrima\Posicao\Lista\TipoPedidoPCP\TipoPedidoPCP.cs" />
     <Compile Include="Models\Pedidos\V1\ProdutosPedido\Exportacao\Lista\ListaDto.cs" />
     <Compile Include="Models\Pedidos\V1\ProdutosPedido\Exportacao\Lista\ProdutoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
@@ -954,7 +961,7 @@
     <Compile Include="Models\Produtos\V1\PrecosTabelaCliente\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Produtos\V1\PrecosTabelaCliente\Lista\FiltroDto.cs" />
     <Compile Include="Models\Produtos\V1\PrecosTabelaCliente\Lista\ListaDto.cs" />
-    <Compile Include="Models\Produtos\V1\PrecosTabelaCliente\TipoValorTabelaEnum.cs" />
+    <Compile Include="Models\Produtos\V1\PrecosTabelaCliente\TipoValorTabela.cs" />
     <Compile Include="Models\Produtos\V1\ChapasVidro\Perdas\Lista\DadosPerdaDto.cs" />
     <Compile Include="Models\Produtos\V1\ChapasVidro\Perdas\Lista\FiltroDto.cs" />
     <Compile Include="Models\Produtos\V1\ChapasVidro\Perdas\Lista\ListaDto.cs" />
@@ -1013,12 +1020,12 @@
     <Compile Include="Models\Producao\V1\Lista\ProdutoPedidoDto.cs" />
     <Compile Include="Models\Producao\V1\Lista\SetorDto.cs" />
     <Compile Include="Models\Producao\V1\Lista\SituacaoProducaoDto.cs" />
-    <Compile Include="Models\Producao\V1\Lista\TipoPedidoEnum.cs" />
-    <Compile Include="Models\Producao\V1\Lista\TipoFastDeliveryEnum.cs" />
-    <Compile Include="Models\Producao\V1\Lista\TipoPecaExibirEnum.cs" />
-    <Compile Include="Models\Producao\V1\Lista\TipoProdutoComposicaoEnum.cs" />
-    <Compile Include="Models\Producao\V1\Lista\SituacaoProducaoEnum.cs" />
-    <Compile Include="Models\Producao\V1\Lista\TipoSituacaoProducaoEnum.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoPedido.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoFastDelivery.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoPecaExibir.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoProdutoComposicao.cs" />
+    <Compile Include="Models\Producao\V1\Lista\SituacaoProducao.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoSituacaoProducao.cs" />
     <Compile Include="Models\Clientes\V1\Tipos\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Clientes\V1\Tipos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Clientes\V1\Tipos\Lista\ListaDto.cs" />
@@ -1031,7 +1038,7 @@
     <Compile Include="Models\Comissionados\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Comissionados\V1\Lista\ListaDto.cs" />
     <Compile Include="Models\Fornecedores\V1\Lista\VendedorDto.cs" />
-    <Compile Include="Models\PlanosConta\V1\Lista\TipoEnum.cs" />
+    <Compile Include="Models\PlanosConta\V1\Lista\Tipo.cs" />
     <Compile Include="Models\Fornecedores\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Fornecedores\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Fornecedores\V1\Lista\ListaDto.cs" />
@@ -1086,7 +1093,7 @@
     <Compile Include="Models\Sinais\V1\Lista\ListaDto.cs" />
     <Compile Include="Models\Sinais\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Cheques\V1\Lista\PermissoesDto.cs" />
-    <Compile Include="Models\Acertos\V1\Lista\ProtestoEnum.cs" />
+    <Compile Include="Models\Acertos\V1\Lista\Protesto.cs" />
     <Compile Include="Models\Beneficiamentos\V1\Configuracoes\ControleDto.cs" />
     <Compile Include="Models\Beneficiamentos\V1\Filtro\BeneficiamentoDto.cs" />
     <Compile Include="Models\Beneficiamentos\V1\Total\DadosBeneficiamentosDto.cs" />
@@ -1113,7 +1120,7 @@
     <Compile Include="Models\Cep\V1\Endereco\ResultadoServicoDto.cs" />
     <Compile Include="Models\Cheques\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Cheques\V1\Configuracoes\ListaDto.cs" />
-    <Compile Include="Models\Cheques\V1\Lista\AdvogadoEnum.cs" />
+    <Compile Include="Models\Cheques\V1\Lista\Advogado.cs" />
     <Compile Include="Models\Cheques\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Cheques\V1\Lista\ListaDto.cs" />
     <Compile Include="Models\Acertos\V1\Lista\PermissoesDto.cs" />
@@ -1146,7 +1153,7 @@
     <Compile Include="Models\Acertos\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Acertos\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Imagens\V1\Exibicao\DadosImagemDto.cs" />
-    <Compile Include="Models\Imagens\V1\Exibicao\TipoItemEnum.cs" />
+    <Compile Include="Models\Imagens\V1\Exibicao\TipoItem.cs" />
     <Compile Include="Models\Liberacoes\V1\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Liberacoes\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Liberacoes\V1\Lista\ListaDto.cs" />
